[gd_scene load_steps=2 format=3 uid="uid://cu2mkxrb13wyk"]

[ext_resource type="Script" uid="uid://bcjbn7rhoyel6" path="res://scripts/tip_button.gd" id="1_iw5h1"]

[node name="TipButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
theme_type_variation = &"TipButton"
text = "?"
script = ExtResource("1_iw5h1")
metadata/_custom_type_script = "uid://bcjbn7rhoyel6"

[node name="TipPopup" type="PopupPanel" parent="."]
oversampling_override = 1.0

[node name="TipLabel" type="Label" parent="TipPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
horizontal_alignment = 1
